tests/parser-test-files/bad-files/define-alias.1.error
error: Malformed alias definition
  --> test:4:0
   |
 4 |  (define-alias)
   |  ^^^^^^^^^^^^^^ expected body
