tests/parser-test-files/bad-files/define-alias.1.coal
;; BAD: Invalid define alias- missing body
(package test-package)

(define-alias)
